--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# MacOS trash
+.DS_Store
+
 # History files
 .Rhistory
 .Rapp.history
@@ -34,3 +37,6 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+doc
+Meta
+.Rproj.user
