--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(fc.check_files_in_data_dir)
 export(fc.ensure_files_in_data_dir)
+export(fc.erase)
 export(fc.get_absolute_path_for_filecache_relative_files)
 export(fc.get_data_dir)
 export(fc.get_pkg_info)
 export(fc.getfile)
+export(fc.list)
 export(fc.remove_local_files)
