--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: pkgfilecache
 Type: Package
-Title: Allow Users of Your Package to Download and Manage Optional Package Data
+Title: Download and Manage Optional Package Data
 Version: 0.1.0
 Author: Tim Schäfer
 Maintainer: Tim Schäfer <ts+code@rcmd.org>
-Description: Allows users to download and manage optional data for your package. The data can be hosted anywhere, and you have to give a Uniform Resource Locator (URL) for each file. File integrity checks are supported. This is useful for package authors who need to ship more than the 5 Megabyte of data currently allowed by the the Comprehensive R Archive Network (CRAN).
+Description: Manage optional data for your package. The data can be hosted anywhere, and you have to give a Uniform Resource Locator (URL) for each file. File integrity checks are supported. This is useful for package authors who need to ship more than the 5 Megabyte of data currently allowed by the the Comprehensive R Archive Network (CRAN).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
